deployment/overlays/prod/namespace.yml
# deloyments/ overlays/prod/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sentiment-prod
