deployment/overlays/prod/gateway-patch.yml
# overlays/prod/gateway-patch.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30008
