deployment/overlays/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentiment-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api.sentiment.local
      http:
        paths:
          - path: /job
            pathType: Prefix
            backend:
              service:
                name: job
                port:
                  number: 8001

          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8000
